--- a/style.css
+++ b/style.css
@@ -6,24 +6,24 @@ html {
   scroll-behavior: smooth;
 }
 
+
+/* navbar */
 nav {
   display: flex;
   justify-content: space-evenly;
-  width: 99.39%;
+  width: 100%;
   height: 5%;
   position: fixed;
-  border-bottom: 5px solid black;
   background-color: white;
 }
 
 nav div {
   padding-left: 100px;
   padding-right: 100px;
-  padding-top: 15px;
-  padding-bottom: 10px;
-  width: 660px;
+  padding-bottom: 5px;
+  width: 230px;
   text-align: center;
-  font-size: 250%;
+  font-size: 150%;
   font-family: Helvetica;
   font-weight: bold;
 }
@@ -58,6 +58,8 @@ a {
   color: #d3843a;
 }
 
+/* welcome and about me */
+
 .little {
   padding: 0;
 }
@@ -72,11 +74,6 @@ a {
   width: 100%;
 }
 
-#welcome {
-  padding: 0;
-  background-color: aliceblue;
-}
-
 .sects {
   display: flex;
   justify-content: space-evenly;
@@ -85,7 +82,6 @@ a {
 #about {
   text-align: center;
   justify-content: space-evenly;
-  padding: 50px;
 }
 
 #about div {
@@ -112,7 +108,7 @@ h2 {
 }
 
 p {
-  font-size: 250%;
+  font-size: 150%;
   padding-left: 18px;
   padding-right: 18px;
   padding-top: 50px;
@@ -120,7 +116,7 @@ p {
 }
 
 ul {
-  font-size: 250%;
+  font-size: 150%;
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
@@ -156,6 +152,7 @@ ul {
   width: 25%;
   background-color: aliceblue;
   padding-bottom: 10px;
+  font-size: 85%;
 }
 
 .round {
@@ -166,7 +163,7 @@ ul {
   width: 30%;
   background-color: rgb(134, 199, 255);
   .shrink {
-    font-size: 250%;
+    font-size: 150%;
   }
 }
 
@@ -178,6 +175,7 @@ ul {
   display: flex;
   justify-content: space-evenly;
   text-align: center;
+
 }
 
 h3 {
@@ -200,7 +198,7 @@ footer {
 }
 
 h4 {
-  font-size: 250%;
+  font-size: 150%;
   margin-top: 15px;
   font-family: Helvetica;
 }
@@ -211,7 +209,7 @@ footer:hover {
   margin-left: 115px;
   margin-top: 1025px;
   .footershrink {
-    font-size: 250%;
+    font-size: 150%;
   }
   h4 {
     font-size: 0%;
